[package]
name = "anchous_injector"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }
sysinfo = "0.30"
rfd = "0.14"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation"] }

[build-dependencies]
cc = "1.0"
